# red-hot_rebis

./: .gitignore  CRITICALITY_BIOFEEDBACK_DESIGN.md  IMASM_ARRANGEMENT_ANALYSIS.md:Zone.Identifier  INDEX.md  MANIFEST.in  MANUAL.md  Makefile  README.md  USER_GUIDE.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT.md:Zone.Identifier  _demo_b4_lattice.py  _demo_belnap.py  _demo_ch3mpiler.py  _demo_clink_chain.py  _demo_decay_chain.py  _demo_materials.py  _demo_materials_sim.py  _demo_novel_catalytic_site.py  _demo_pipeline.py  _demo_serpentrod.py  _demo_therapeutics.py  _gen_univ_map.py  _help_examples.py  _real_demo.py  amylase.fasta  clink_design_L5_to_L8.json  commit.txt  commit_fix.txt  compute_promotions.py  content.png:Zone.Identifier  coupling.json  coupling.json:Zone.Identifier  diaschizelics_design.md  diaschizic_iupac.py  diaschizics_design.md  diaschizics_iupac.json  diaschizics_iupac.md  diaschizics_iupac.tsv  files.zip:Zone.Identifier  (+37 more)
Ars_Therapeutica/: README.md  __init__.py
NDUFAF6_datasets/: md5sum.txt
_archive/: imscriptor_card.html  imscriptor_viewer.html
_archive/Ars_Therapeutica/: README.md  pyproject.toml
_archive/Ars_Therapeutica/ars_therapeutica/: types.py
_archive/Ars_Therapeutica/docs/: CF_THERAPY.md  gout_elimination_design.md  gout_holistic_protocol.md  top10_biochemical_material_targets.md
_archive/Ars_Therapeutica/lean/: IGMorphism.lean
alchemical_bridge/: __init__.py  alchemical_third_engine.py  artephius_decoder.py  basil_valentine_ladder.py  bridge.py  green_fire_engine.py  operations.py  operator.py  retrosynthetic_stone_engine.py  treatise_map.py  zosimos_engine.py
anthracene/: anthracene.cdxml
biology/: base_human_protocol.md  biology_sim.py  biology_sim.py.p4rakernel_backup  biology_sim_frobenius_exact.py  biology_sim_frobenius_exact_results.json  biology_simulation_results.json  frobenius_closure_analysis.md  frobenius_closure_repaired.md  ouroboric_telomere.py  ouroboric_telomere_expanded.md  ouroboric_telomere_expanded.py  ouroboric_telomere_expanded_results.json  ouroboric_telomere_frobenius.py  ouroboric_telomere_frobenius_repaired_results.json  ouroboric_telomere_frobenius_results.json  ouroboric_telomere_results.json
cat_allergy_design/: darpin_feld1_neutralizer.md  frobenius_exact_darpins.md
cdxml/: __init__.py  generator.py  molecules.py  pipeline_hook.py  target_decomposition.py
cdxmlMAX/: r1_route1_amide_precursor.cdxml  r1_route1_amine_precursor.cdxml  r1_route1_route1_halide_precursor.cdxml  r1_route1_route1_route1_aldehyde_precursor.cdxml  r1_route1_route1_route1_carbonyl_precursor.cdxml  r1_route1_route2_carbonyl_precursor.cdxml  r1_route1_route2_ether_precursor.cdxml  r1_route1_route3_halide_precursor.cdxml  r1_route2_aldehyde_precursor.cdxml  r1_route2_epoxide_precursor.cdxml  r1_route3_amide_precursor.cdxml  r3_alcohol_precursor.cdxml  r4_amine_precursor.cdxml
cdxmlMAX2/: r1_route1_aromatic_ring_precursor.cdxml  r1_route1_ether_precursor.cdxml  r1_route1_route1_halide_precursor.cdxml  r1_route1_route1_route1_aldehyde_precursor.cdxml  r1_route1_route1_route1_amine_precursor.cdxml  r1_route1_route1_route1_carbonyl_precursor.cdxml  r1_route1_route1_route2_epoxide_precursor.cdxml  r1_route1_route2_carbonyl_precursor.cdxml  r1_route2_aromatic_ring_precursor.cdxml  r1_route2_halide_precursor.cdxml  r1_route3_aldehyde_precursor.cdxml  r1_route3_amine_precursor.cdxml  r2_alcohol_precursor.cdxml  r3_ether_precursor.cdxml
cdxml_output/: acetamide_disconnections.cdxml  demo_aspirin.cdxml
cdxml_output2/: 2-(4-isobutylphenyl)propanoic acid_disconnections.cdxml
cdxml_test/: acetamide_disconnections.cdxml
cdxml_test2/: aspirin_disconnections.cdxml
cephalopod_design/: 00_MANIFEST.md  CEPHALOPOD_HUMAN_ENGINEERING.md  HUMAN_NATIVE_REDESIGN.md  cephalopod_human_engineering.md  clink_design_ground_up.json  serpentrod_results.json
ch3mpiler/: CAS_cache.json  _build_fg_db.py  _test_rdkit.py  bond_fragment_integrator.py  cas_smiles_fix.py  cdxml_generator.py  compiler.py  fg_exhaustive.py  gen_v2.py  iupac_resolver.py  patch_cas_smiles.py  precursor_lattice.py  reaction_deriver.py  rich_output.py  scaffold_parser.py  smiles_to_cdxml.py  test_enrich.py  test_enrich2.py
clink/: PIPELINE_README.md  README_CLINK.md  __init__.py  bridges.py  chain.py  integration.py  pipeline_engine.py  structural_algebra.py
data/: Ligand.txt  antibody_design_results.json  antibody_results.json  bevy_results.json  clink_design_L3_to_L7.json  clink_design_L3_to_L8.json  diaschizics_iupac.json  ground_up_organism.json  (+7 more)
docs/: opm2.md  (+35 more)
(+773 files in other folders)
