[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-hot-rebis"
version = "4.0.0"
description = "Red-Hot Rebis — Imscribing Grammar integrated toolchain"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Lando ⊗ ⊙perator"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
rebis = "rebis.cli:main"

# Primary computation engines (Tier 1)
"rebis.chain" = "rebis.chain_entry:main"
"rebis.gene-pipeline" = "rebis.gene_pipeline_entry:main"
"rebis.ch3mpiler" = "rebis.ch3mpiler:main"
"rebis.serpentrod" = "rebis.serpentrod:main"
"rebis.ligand" = "rebis.ligand:main"
"rebis.sidechain" = "rebis.sidechain:main"

# Specialized engines (Tier 2)
"rebis.therapeutics" = "rebis.therapeutics:main"
"rebis.materials" = "rebis.materials:main"
"rebis.biology" = "rebis.biology:main"
"rebis.pipeline" = "rebis.pipeline:main"
"rebis.gene" = "rebis.gene:main"
"rebis.alchemy" = "rebis.alchemy:main"
"rebis.clink" = "rebis.clink:main"
"rebis.p4ra" = "rebis.p4ra:main"

# Infrastructure
"rebis.demo" = "rebis.demo_entry:main"
"rebis.status" = "rebis.status_entry:main"
"rebis.verify" = "rebis.verify_entry:main"

# Package discovery (ported from the removed setup.py). Archived experiment
# dirs (unified_demo, Ars_Therapeutica, plasma, natural_products) are
# intentionally excluded.
[tool.setuptools.packages.find]
include = [
    "rebis*",
    "rhr_p4rky*",
    "shared*",
    "ch3mpiler*",
    "clink*",
    "materials*",
    "biology*",
    "serpentrod*",
    "imas*",
    "pipeline*",
    "cdxml*",
    "scripts*",
    "therapeutics*",
    "gene_imscriber*",
    "imasm_iterator*",
    "alchemical_bridge*",
]

[tool.setuptools.package-data]
shared = ["*.json"]
"*" = ["*.json", "*.txt", "*.csv", "*.fasta", "*.pdb"]